--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,7 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
-# *.local
-# *.development
-# *.staging
-# *.production
+*.local
 
 # Editor directories and files
 .idea
